--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -15,6 +15,9 @@ jobs:
 
       - name: Check out source code
         uses: actions/checkout@v1
+      
+      - name: Get dependencies
+        run: go get github.com/xtgo/uuid 	"github.com/urfave/cli"
 
       - name: Build
         run: go build .
