update changelog automatically too

--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -45,6 +45,11 @@ jobs:
           sed -i "s/const Version = \"$current_version\"/const Version = \"$new_version\"/" version.go
           echo "::set-output name=new_version::$new_version"
 
+      - name: Update CHANGELOG.md
+        run: |
+          new_version="${{ steps.bump-version.outputs.new_version }}"
+          echo -e "## $new_version\n\n* [Full Changelog](https://github.com/PostHog/posthog-go/compare/v${current_version}...v${new_version})\n\n$(cat CHANGELOG.md)" > CHANGELOG.md
+
       - name: Commit and push changes
         run: |
           git config --local user.email "action@github.com"
