--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          token: ${{ secrets.POSTHOG_BOT_GITHUB_TOKEN }}
+          persist-credential: false
 
       - name: Set up Go
         uses: actions/setup-go@v3
@@ -57,12 +57,14 @@ jobs:
           echo -e "## $new_version\n\n* [Full Changelog](https://github.com/PostHog/posthog-go/compare/v${current_version}...v${new_version})\n\n$(cat CHANGELOG.md)" > CHANGELOG.md
 
       - name: Commit and push changes
+        env:
+          PAT: ${{ secrets.PAT_WITH_PUSH_ACCESS }}
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add version.go CHANGELOG.md
           git commit -m "Bump version to ${{ steps.bump-version.outputs.new_version }}"
-          git push
+          git push https://$PAT@github.com/${{ github.repository }}.git HEAD:master
 
       - name: Create tag
         run: |
