--- a/examples/.env.example
+++ b/examples/.env.example
@@ -7,5 +7,7 @@ POSTHOG_PROJECT_API_KEY=phc_your_project_api_key_here
 # Your personal API key (for local evaluation and other advanced features)
 POSTHOG_PERSONAL_API_KEY=phx_your_personal_api_key_here
 
-# PostHog host URL (remove this line if using posthog.com)
-POSTHOG_ENDPOINT=http://localhost:8000
+# PostHog host URL
+# For cloud: https://us.i.posthog.com (US) or https://eu.i.posthog.com (EU)
+# For self-hosted: http://localhost:8010 or your instance URL
+POSTHOG_ENDPOINT=http://localhost:8010
