--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -21,4 +21,4 @@ jobs:
         run: go build .
 
       - name: Test
-        run: go test -timeout 30s -v .
+        run: go test -timeout 30s -v ./...
