--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,7 +83,7 @@ jobs:
 
       - name: Get GitHub App token
         id: releaser
-        uses: getsentry/action-github-app-token@97c9e23528286821f97fba885c1b1123284b29cc # v2
+        uses: PostHog/create-app-token@main
         with:
           app_id: ${{ secrets.GH_APP_POSTHOG_GO_RELEASER_APP_ID }}
           private_key: ${{ secrets.GH_APP_POSTHOG_GO_RELEASER_PRIVATE_KEY }} # Secrets available only inside the 'Release' environment, requires approval from a maintainer
