--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,9 +63,11 @@ jobs:
 
   release:
     name: Bump versions and release
-    needs: [check-release-label]
+    needs: [check-release-label, notify-approval-needed]
     runs-on: ubuntu-latest
-    if: needs.check-release-label.outputs.should-release == 'true'
+    # Use `always()` to ensure the job runs even if the check-release-label job fails
+    # but still depend on it to be able to use `needs.notify-approval-needed.outputs.slack_ts`
+    if: always() && needs.check-release-label.outputs.should-release == 'true'
     environment: "Release" # This will require an approval from a maintainer, they are notified in Slack above
     permissions:
       contents: write
@@ -73,11 +75,12 @@ jobs:
       id-token: write
     steps:
       - name: Notify Slack - Approved
+        if: needs.notify-approval-needed.outputs.slack_ts != ''
         uses: posthog/.github/.github/actions/slack-thread-reply@main
         with:
           slack_bot_token: ${{ secrets.SLACK_CLIENT_LIBRARIES_BOT_TOKEN }}
           slack_channel_id: ${{ vars.SLACK_APPROVALS_CLIENT_LIBRARIES_CHANNEL_ID }}
-          thread_ts: ${{ steps.notify-approval-needed.outputs.slack_ts }}
+          thread_ts: ${{ needs.notify-approval-needed.outputs.slack_ts }}
           message: "✅ Release approved! Version bump in progress..."
           emoji_reaction: "white_check_mark"
 
@@ -184,12 +187,12 @@ jobs:
             }
 
       - name: Notify Slack - Failed
-        if: ${{ failure() }}
+        if: ${{ failure() && needs.notify-approval-needed.outputs.slack_ts != '' }}
         uses: posthog/.github/.github/actions/slack-thread-reply@9b04bf3288aca2b4cd3883070858b034b4f7f334
         with:
           slack_bot_token: ${{ secrets.SLACK_CLIENT_LIBRARIES_BOT_TOKEN }}
           slack_channel_id: ${{ vars.SLACK_APPROVALS_CLIENT_LIBRARIES_CHANNEL_ID }}
-          thread_ts: ${{ steps.notify-approval-needed.outputs.slack_ts }}
+          thread_ts: ${{ needs.notify-approval-needed.outputs.slack_ts }}
           message: "❌ Failed to release `posthog-go@v${{ steps.bump-version.outputs.new_version }}`! <https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|View logs>"
           emoji_reaction: "x"
 
@@ -197,7 +200,7 @@ jobs:
     name: Notify Slack - Released
     needs: [notify-approval-needed, release]
     runs-on: ubuntu-latest
-    if: always() && needs.release.result == 'success'
+    if: always() && needs.release.result == 'success' && needs.notify-approval-needed.outputs.slack_ts != ''
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
