--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,10 +86,10 @@ jobs:
 
       - name: Get GitHub App token
         id: releaser
-        uses: PostHog/create-app-token@main
+        uses: actions/create-github-app-token@29824e69f54612133e76f7eaac726eef6c875baf # v2.2.1
         with:
-          app_id: ${{ secrets.GH_APP_POSTHOG_GO_RELEASER_APP_ID }}
-          private_key: ${{ secrets.GH_APP_POSTHOG_GO_RELEASER_PRIVATE_KEY }} # Secrets available only inside the 'Release' environment, requires approval from a maintainer
+          app-id: ${{ secrets.GH_APP_POSTHOG_GO_RELEASER_APP_ID }}
+          private-key: ${{ secrets.GH_APP_POSTHOG_GO_RELEASER_PRIVATE_KEY }} # Secrets available only inside the 'Release' environment, requires approval from a maintainer
 
       - name: Checkout repository
         uses: actions/checkout@v4
