--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -21,4 +21,4 @@ jobs:
         run: go build .
 
       - name: Test
-        run: go test -race -count=1 -timeout 5m -v ./...
+        run: go test -v -race -count=1 -timeout=5m -coverprofile=coverage.out ./...
