chore(releaser): Update Go Releaser flow with best practices

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -128,7 +128,8 @@ jobs:
         run: |
           current_version="${{ steps.bump-version.outputs.current_version }}"
           new_version="${{ steps.bump-version.outputs.new_version }}"
-          echo -e "## $new_version\n\n* [Full Changelog](https://github.com/PostHog/posthog-go/compare/v${current_version}...v${new_version})\n\n$(cat CHANGELOG.md)" > CHANGELOG.md
+          release_date=$(date +%Y-%m-%d)
+          echo -e "## $new_version - $release_date\n\n* [Full Changelog](https://github.com/PostHog/posthog-go/compare/v${current_version}...v${new_version})\n\n$(cat CHANGELOG.md)" > CHANGELOG.md
 
       - name: Commit version bump
         id: commit-version-bump
